[tool.poetry]
name = "advent_of_code"
version = "1.0.0"
description = "Solving Advent of Code problems"
license = "MIT"
authors = ["Gurashish Singh <gurashish1singh@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
aoc = "advent_of_code.main:main"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
pre-commit = "^2.20.0"
flake8-bugbear = "^22.10.25"
lizard = "^1.17"

[tool.black]
line-length = 100

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true
quiet = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
